Apps_deployment/Policy-Group/Policy-webportal-fromAndTo/allow-ingress-controller-to-webportal.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller-to-webportal
  namespace: frontend-service
spec:
  podSelector:
    matchLabels:
      app: webportal-service
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8083
